--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     </head>
     <body>
         <header>Смугасті шерстяники / Stripy furies - 2022</header>
-        <div class="wrapper">
-<!--            <div id="fact-placeholder"></div>-->
-        </div>
+        <div class="wrapper"></div>
         <footer>2022 Serhii & Olya. Обмежений тираж - 10 шт. (для найдорожчих :) )</footer>
         <script src="./index.js"></script>
     </body>
