Fix markup for mobiles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>Смугасті шерстяники / Stripy furies - 2022</header>
         <div class="wrapper"></div>
-        <footer>2022 Serhii & Olya. Обмежений тираж - 10 шт. (для найдорожчих :) )</footer>
+        <footer>2022 Serhii & Olya.<br>Обмежений тираж - 10 шт. (для найдорожчих :) )</footer>
         <script src="./index.js"></script>
     </body>
 </html>
